# py-marshal

./: .gitignore  Cargo.toml
examples/: bytecode.rs
examples/bytecode/: reference.py
src/: lib.rs  read.rs  test.rs  utils.rs
