[package]
name = "py-marshal"
version = "0.3.4"
authors = ["Solomon Ucko <solly.ucko@gmail.com>"]
edition = "2018"
description = "A Rust port of https://github.com/python/cpython/blob/master/Python/marshal.c"
license = "MIT"
repository = "https://github.com/sollyucko/py-marshal"
readme = "README.md"
categories = ["emulators", "encoding", "parser-implementations", "parsing"]
keywords = ["python", "marshal", "read", "decode"]

[dependencies]
bitflags = "1"
bumpalo = "3"
num-traits = "0.2"
num-derive = "0.3"
num-bigint = "0.2"
num-complex = "0.2"
thiserror = "1"
owning_ref = { version = "0.4", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }

[features]
serialize = ["serde", "serde/rc", "num-bigint/serde", "num-complex/serde"]

[dev-dependencies]
# used for the examples
serde_json = {version = "1", features = ["preserve_order"] }
base64 = "0.13"
byteorder = "1"
anyhow = "1"
ordered-float = "2"

[[example]]
name = "bytecode"
required-features = ["serialize"]